Added system configuration.